# hobbernetes

./: .gitignore  .pre-commit-config.yaml  .prettierrc  README.md  gha-creds-6cb762dc05a10e39.json  gha-creds-d11ce4eb44bc91fc.json  gha-kubeconfig-1c788c4de21e758f  gha-kubeconfig-b13f5fbdbb044a90  index.html  pyproject.toml  script.js  sparktest.py  sticky.md  style.css  token
.github/workflows/: main-log-output.yaml  main-simple-http.yaml  main.yaml
chapter6/diy-crd/: README.md  apply_all.sh
chapter6/diy-crd/dummysite-app/: Cargo.toml  Dockerfile
chapter6/diy-crd/dummysite-app/src/: main.rs
chapter6/diy-crd/web-page-copy-paster/: .dockerignore  Cargo.toml  Dockerfile
chapter6/diy-crd/web-page-copy-paster/src/: main.rs
gcloud_scripts/: cluster_init.sh  delete_cluster.sh  gc_api_setup.sh  make_requests_exercise.sh
log_output/: Dockerfile  README.md  apply_all.sh  fetcher.Dockerfile  fetcher.py  greeter.Dockerfile  greeter.py  helper.py  kustomization.yaml  logger.Dockerfile  logger.py  logger.sh
misc/: README.md  deploy.sh  setup.sh
old_kubeadm_setup/: .gitignore
ping_pong/: .dockerignore  Cargo.toml  Dockerfile  README.md  deploy_as_serverless.sh
redis/: stateful.yaml
simple_http/: Dockerfile  README.md  api.Dockerfile  api_server.py  api_utils.py  broadcaster.Dockerfile  broadcaster.py  gen.Dockerfile  gen_app.py  index.html  kustomization.yaml  patch-broadcaster.yaml  patch-sa.yaml  requirements.txt  server.py  server.sh  static.Dockerfile  static_server.py  static_utils.py
volume_related/: pvc.yaml
widgets/: widget1.html  widgets.json
(+86 files in other folders)
