[package]
name = "dummysite-app"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
regex = "1"
tracing = "0.1"
tracing-subscriber = "0.3"