[package]
name = "web-page-copy-paster"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime: #[tokio::main] needs macros + a runtime flavor
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Stream helpers for controller.run().for_each(...)
futures = "0.3"

# kube client + derive + runtime controller APIs
kube = { version = "0.92", features = ["runtime", "derive"] }

# Kubernetes API types (Deployment, PodSpec, EnvVar, etc.)
k8s-openapi = { version = "0.22.0", features = ["latest"] }

# Required by CustomResource derive + CRD schema generation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
